@@ -1,3 +1,9 @@
+2023-03-04  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* libpoke/pkl-fold.c (OP_BINARY_OIO): Support units 0.
+	* testsuite/poke.pkl/mul-offsets-11.pk: New test.
+	* testsuite/Makefile.am (EXTRA_DIST): Add new test.
+
 2023-03-03  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
 
 	* doc/poke.texi (Poking a SBM Image :: Saving the Image): Fix
